Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-35265

wsrep.wsrep-recover, wsrep.wsrep-recover-v25 fail on assertion !wsrep_is_wsrep_xid(&trx->xid)

    XMLWordPrintable

Details

    Description

      03816793fdfaf072cdb0e630708819f770e06f42

      wsrep.wsrep-recover-v25 'binlogon'       [ fail ]
              Test ended at 2024-10-27 00:49:22
       
      CURRENT_TEST: wsrep.wsrep-recover-v25
      mysqltest: In included file "/mnt8t/bld/preview-11.7-bb-11.6-MDEV-32887-vector-debug/mysql-test/suite/wsrep/t/wsrep-recover-step.inc": 
      included from /mnt8t/bld/preview-11.7-bb-11.6-MDEV-32887-vector-debug/mysql-test/suite/wsrep/t/wsrep-recover-v25.test at line 110:
      At line 17: exec of '/mnt8t/bld/preview-11.7-bb-11.6-MDEV-32887-vector-debug/sql/mariadbd --defaults-group-suffix=.1 --defaults-file=/dev/shm/var-mtr-check/my.cnf --log-error=/dev/shm/var-mtr-check/tmp/galera_wsrep_recover.log --innodb --wsrep-recover --log-bin --core-file > /dev/shm/var-mtr-check/tmp/galera_wsrep_recover.log 2>&1' failed, error: 34304, status: 134, errno: 32
      Output from before failure:
      # Kill the server
      

      #8  0x00007f9eed845395 in __assert_fail_base (fmt=0x7f9eed9b9a90 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", assertion=assertion@entry=0x55f34e5cf8e8 "!wsrep_is_wsrep_xid(&trx->xid)", file=file@entry=0x55f34e5c6e68 "/data/bld/preview-11.7-bb-11.6-MDEV-32887-vector-debug/storage/innobase/handler/ha_innodb.cc", line=line@entry=17208, function=function@entry=0x55f34e5cf878 "int innobase_recover_rollback_by_xid(const XID*)") at ./assert/assert.c:92
      #9  0x00007f9eed853e32 in __GI___assert_fail (assertion=0x55f34e5cf8e8 "!wsrep_is_wsrep_xid(&trx->xid)", file=0x55f34e5c6e68 "/data/bld/preview-11.7-bb-11.6-MDEV-32887-vector-debug/storage/innobase/handler/ha_innodb.cc", line=17208, function=0x55f34e5cf878 "int innobase_recover_rollback_by_xid(const XID*)") at ./assert/assert.c:101
      #10 0x000055f34dbac880 in innobase_recover_rollback_by_xid (xid=0x7fffdae56810) at /data/bld/preview-11.7-bb-11.6-MDEV-32887-vector-debug/storage/innobase/handler/ha_innodb.cc:17208
      #11 0x000055f34d74d444 in xarecover_do_commit_or_rollback (hton=0x55f35043c5b8, arg=0x7fffdae56bd0) at /data/bld/preview-11.7-bb-11.6-MDEV-32887-vector-debug/sql/handler.cc:2692
      #12 0x000055f34d74d5c4 in xarecover_do_commit_or_rollback_handlerton (hton=0x55f35043c5b8, arg=0x7fffdae56bd0) at /data/bld/preview-11.7-bb-11.6-MDEV-32887-vector-debug/sql/handler.cc:2723
      #13 0x000055f34d74915a in tp_foreach (thd=0x0, func=0x55f34d74d590 <xarecover_do_commit_or_rollback_handlerton(THD*, transaction_participant*, void*)>, arg=0x7fffdae56bd0) at /data/bld/preview-11.7-bb-11.6-MDEV-32887-vector-debug/sql/handler.cc:894
      #14 0x000055f34d74d611 in xarecover_complete_and_count (member_arg=0x55f3507bcea0, param_arg=0x7fffdae56bd0) at /data/bld/preview-11.7-bb-11.6-MDEV-32887-vector-debug/sql/handler.cc:2741
      #15 0x000055f34e0c13cd in my_hash_iterate (hash=0x7fffdae56d40, action=0x55f34d74d5cb <xarecover_complete_and_count(void*, void*)>, argument=0x7fffdae56bd0) at /data/bld/preview-11.7-bb-11.6-MDEV-32887-vector-debug/mysys/hash.c:808
      #16 0x000055f34d74d72f in ha_recover_complete (commit_list=0x7fffdae56d40, coord=0x0) at /data/bld/preview-11.7-bb-11.6-MDEV-32887-vector-debug/sql/handler.cc:2777
      #17 0x000055f34d8d494e in Recovery_context::complete (this=0x7fffdae571c0, log=0x55f34f10f060 <mysql_bin_log>, xids=...) at /data/bld/preview-11.7-bb-11.6-MDEV-32887-vector-debug/sql/log.cc:11735
      #18 0x000055f34d8d6d8a in MYSQL_BIN_LOG::recover (this=0x55f34f10f060 <mysql_bin_log>, linfo=0x7fffdae57bd0, last_log_name=0x7fffdae577d0 "./mysqld-bin.000007", first_log=0x7fffdae579d0, fdle=0x55f350ccfeb8, do_xa=true) at /data/bld/preview-11.7-bb-11.6-MDEV-32887-vector-debug/sql/log.cc:12341
      #19 0x000055f34d8d7495 in MYSQL_BIN_LOG::do_binlog_recovery (this=0x55f34f10f060 <mysql_bin_log>, opt_name=0x55f350573ea0 "mysqld-bin", do_xa_recovery=true) at /data/bld/preview-11.7-bb-11.6-MDEV-32887-vector-debug/sql/log.cc:12537
      #20 0x000055f34d8d2c14 in MYSQL_BIN_LOG::open (this=0x55f34f10f060 <mysql_bin_log>, opt_name=0x55f350573ea0 "mysqld-bin") at /data/bld/preview-11.7-bb-11.6-MDEV-32887-vector-debug/sql/log.cc:10917
      #21 0x000055f34d167525 in init_server_components () at /data/bld/preview-11.7-bb-11.6-MDEV-32887-vector-debug/sql/mysqld.cc:5593
      #22 0x000055f34d1684e5 in mysqld_main (argc=149, argv=0x55f350439580) at /data/bld/preview-11.7-bb-11.6-MDEV-32887-vector-debug/sql/mysqld.cc:5998
      #23 0x000055f34d15b9e9 in main (argc=8, argv=0x7fffdae5a5a8) at /data/bld/preview-11.7-bb-11.6-MDEV-32887-vector-debug/sql/main.cc:34
      

      Attachments

        Issue Links

          Activity

            People

              teemu.ollakka Teemu Ollakka
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.